<resources>
    <string name="app_name">"Human eTime"</string>
    <string name="version">"Versión:"</string>
    <string name="build">"Compilación:"</string>
    <string name="search">"Buscar"</string>
    <string name="at">"a las"</string>
    <string name="aviso">"Aviso"</string>
    <string name="checkin">"Entrada"</string>
    <string name="checkout">"Salida"</string>
    <string name="logout">"Cerrar sesión"</string>
    <string name="employee_number">"Empleado:"</string>
    <string name="success">"Éxito"</string>
    <string-array name="day_of_the_week_array">
        <item name="monday">"Lunes"</item>
        <item name="tuesday">"Martes"</item>
        <item name="wednesday">"Miércoles"</item>
        <item name="thursday">"Jueves"</item>
        <item name="friday">"Viernes"</item>
        <item name="saturday">"Sábado"</item>
        <item name="sunday">"Domingo"</item>
    </string-array>
    <string name="message_permission">"La app requiere de permisos, es necesario otorgarlos de manera manual para el correcto funcionamiento y posteriormente reintenté nuevamente"</string>
    <string name="close_app">"Cerrar aplicación"</string>
    <string name="et_licence_terms_title">"Política de Privacidad"</string>
    <string name="et_licence_terms_text">"Al usar Human eTime, aceptas nuestra Política de Privacidad"</string>
    <string name="et_licence_terms_text_link">"&lt;u>Política de Privacidad.&lt;/u>"</string>
    <string name="et_text_confirm">"Confirmar"</string>
    <string name="actualizacion_desc">"Se acaba de descargar una actualización."</string>
    <string name="restart">"Reintentar"</string>
    <string name="log_in">"Iniciar sesión"</string>
    <string name="company_code">"Clave de compañía"</string>
    <string name="employee_number_splash">"Número de empleado"</string>
    <string name="to_access">"Acceder"</string>
    <string name="textBottomSplash">"Human eTime by VenturesSoft® S.A de C.V"</string>
    <string name="error_company_empty">"Favor de ingresar la compañía."</string>
    <string name="error_employee_empty">"Favor de ingresar su número de empleado."</string>
    <string name="message_successful_logout">"Sesión finalizada."</string>
    <string name="desactive_airplane">"Human eTime solicita la desactivación del modo vuelo."</string>
    <string name="desactive_airplane_comfirm">"Para acceder a tus datos, desactiva "Modo de vuelo" o usa Wi-Fi."</string>
    <string name="side_menu_title_0">"Historial offline"</string>
    <string name="side_menu_title_1">"Acerca de"</string>
    <string name="side_menu_title_2">"Ajustes"</string>
    <string name="side_menu_title_3">"Cerrar sesión"</string>
    <string name="message_confirm_logout">"¿Está seguro que quiere salir de la App?"</string>
    <string name="conexion_internet">"Verifique conexión a internet, por favor active WiFi o datos."</string>
    <string name="aCopyright">"Copyright ©: "</string>
    <string name="aCopyrightYear">"1995–2021"</string>
    <string name="advetencia">"Advertencia"</string>
    <string name="mAdvetencia">"Este programa está protegido por las leyes de derechos de autor y otros tratados internacionales. La reproducción o distribución ilícita de este programa, o de cualquier parte del mismo, está penada por la ley con severas sanciones civiles y penales; será objeto de todas las acciones judiciales que correspondan."</string>
    <string name="text_view_1_offline">"Encuentra tus asistencias registradas en el sistema."</string>
    <string name="noRecords">"No hay registros pendientes"</string>
    <string name="no_word">"Ingrese una palabra clave"</string>
    <string name="employeesView">"Ver lista de empleados"</string>
    <string name="login_title_language">"Idioma"</string>
    <string name="settings_spanish">"Español"</string>
    <string name="settings_english">"English"</string>
    <string name="settings_portuguese">"Português"</string>
    <string name="settings_french">"Francés"</string>
    <string name="btnSave">"Guardar"</string>
    <string name="settings_voice_assistant">"Asistente de voz."</string>
    <string name="key_word_description">"Solo se puede ingresar una sola palabra"</string>
    <string name="key_word">"Palabra clave "</string>
    <string name="change">"Cambiar"</string>
    <string name="add_key_word">"Agregar palabra clave"</string>
    <string name="add_key_message">"Ingresa la palabra que deseas registrar para que el asistente de voz reconozca, para realizar tus registros."</string>
    <string name="assistant_disable">"El asistente esta desabilitado, No hay conexion a internet"</string>
    <string name="picture_local">"Foto local"</string>
    <string name="local_picure_description">Capture la foto con la que será enrolada de forma local.\n\nEs recomendable que se encuentre en un lugar iluminado y que no haya ningún elemento que impida la claridad de la fotografía</string>
    <string name="local_picure_take_picture">"Tomar foto"</string>
    <string name="local_picure_validate_picture">"Verifique que la foto es correcta para el enrolamiento."</string>
    <string name="local_picure_picture_accept">"Foto actual"</string>
    <string name="local_picure_picture_pending">"Foto pendiente"</string>
    <string name="local_picure_picture_change">"Cambiar Foto"</string>
    <string name="local_picure_replace_description">"Ya existe una fotografía pendiente por autorizar\n\n¿Desea reemplazarla?"</string>
    <string name="local_picure_new_picture">"¿Quieres enviar una solicitud para cambiar la foto de enrolamiento?"</string>
    <string name="title_bssid">"Redes WiFi"</string>
    <string name="wifi">"WiFi"</string>
    <string name="bssid">"BSSID"</string>
    <string name="bssid_empty">"Active WiFi para obtener BSSID"</string>
    <string name="title_list_employees">"Lista de empleados"</string>
    <string name="last">Última</string>
    <string name="message_validate_check">"Seleccione una opción de entrada o salida."</string>
    <string name="error_no_location_found">"No se obtuvo la ubicación GPS, verifique que está activado e intente nuevamente."</string>
    <string name="error_admin_employee_empty">"Favor de ingresar un número de empleado."</string>
    <string name="colab_mode">"Modo colaborador"</string>
    <string name="error_developer_mode">"Desactiva las opciónes de desarrollador"</string>
    <string name="active_date">"Human eTime necesita la activación automática de fecha y hora."</string>
    <string name="active_zone">"Human eTime necesita la activación de la zona horaria."</string>
    <string name="detectando_rostro">"Detectando rostro, Parpadee para tomar la foto"</string>
    <string name="checkin_text">"Entrada"</string>
    <string name="checkout_text">"Salida"</string>
    <string name="process_input"><![CDATA[Procesando su <b>%1$s</b>…]]></string>
    <string name="message_well_done">"¡Bien hecho!"</string>
    <string name="message_succesfull_checked">"procesada correctamente."</string>
    <string name="check_sum_up">"Detalles del registro:"</string>
    <string name="terminal">"Terminal virtual:"</string>
    <string name="mensajeoffline">"Cuando vuelva la conexión a Human su"</string>
    <string name="mensajeoffline1">"será enviada  a validación."</string>
    <string name="message_location_activated">"Necesita tener los servicios de ubicación activados."</string>
    <string name="title_gps_off">"GPS Desactivado"</string>
    <string name="error_timeout">"por favor conéctese a una red estable"</string>
    <string name="error_http">"Se ha producido un error inesperado. Por favor, inténtalo nuevamente"</string>
    <string name="error_user_local">"El usuario no está registrado en este dispositivo. Inicie sesión"</string>
    <string name="face_no_detected">"Rostro no reconocido, por favor limpie su cámara y busque un entorno más iluminado"</string>
    <string name="small_face">"Acerque más el rostro al dispositivo"</string>
    <string name="error_in_face">"Se ha detectado una imagen no permitida, intente nuevamente"</string>
    <string name="error_server_connection">"El servicio Human eTime no está disponible, repórtelo con el supervisor."</string>
    <string name="datosenviar_title">"Marcajes pendientes"</string>
    <string name="Yes">"Si"</string>
    <string name="no">"No"</string>
    <string name="accept">"Aceptar"</string>
    <string name="cancel">"Cancelar"</string>
    <string name="configuration">"Configuración"</string>
    <string name="voice_message5">"Comience a hablar"</string>
    <string name="intermitencias_con_la_red">"Espere un momento"</string>
    <string name="HET000">"Success"</string>
    <string name="HET001">"Datos de compañía incorrectos."</string>
    <string name="HET002">"El número de empleado es incorrecto."</string>
    <string name="HET004">"Clave de compañía incorrecta."</string>
    <string name="HET005">"El empleado no se encuentra activo en el sistema."</string>
    <string name="HET006">"El empleado no cuenta con una foto de perfil asignada."</string>
    <string name="HET007">"El empleado no cuenta con una licencia de Human eTime."</string>
    <string name="HET025">"La fecha y hora de checada es incorrecta."</string>
    <string name="HET026">"Datos de checada incorrecto."</string>
    <string name="HET027">"Human eTime no tuvo acceso a la foto del empleado."</string>
    <string name="HET028">"El valor de la prioridad es incorrecto."</string>
    <string name="HET029">"Zona de marcaje bluetooth incorrecta."</string>
    <string name="HET030">"Zona de marcaje GPS incorrecta."</string>
    <string name="HET031">"No cuenta con un maestro de reloj activo."</string>
    <string name="HET032">"El rostro no coincide con su foto."</string>
    <string name="HET033">"Es necesario registrar una salida."</string>
    <string name="HET040">"Es necesario registrar una entrada."</string>
    <string name="HET041">"Ya existe un registro con la misma hora y minuto."</string>
    <string name="HET042">"Ya existe un registro para esa fecha."</string>
    <string name="HET045">"La hora de salida no puede ser menor a la hora de entrada."</string>
    <string name="HET214">"La compañía no existe."</string>
    <string name="HET239">"La compañía no tiene un usuario administrador asociado."</string>
    <string name="HET240">"Saldo insuficiente, no se puede registrar checadas."</string>
    <string name="HET320">"El empleado no existe."</string>
    <string name="HET500">"El campo 'FechaHoraChecada' es obligatorio."</string>
    <string name="HET501">"El campo 'TipoChecada' es obligatorio."</string>
    <string name="HET502">"El campo 'Prioridad' es obligatorio."</string>
    <string name="HET505">"No se cuenta con checadas previas, es necesario registrar una entrada."</string>
    <string name="HET506">"El empleado no cuenta con estaciones asignadas."</string>
    <string name="HET507">"Zona de marcaje bluetooth y GPS incorrecta."</string>
    <string name="HET508">"El campo 'Beacon' es obligatorio cuando la prioridad es 1."</string>
    <string name="HET521">"Error al consultar ambiente."</string>
    <string name="ET000">Registro exitoso</string>
    <string name="ET001">El valor correspondiente a la compañía es incorrecto.</string>
    <string name="ET002">El valor correspondiente al número de empleado es incorrecto.</string>
    <string name="ET004">Clave de Compañía incorrecta, intente de nuevo.</string>
    <string name="ET005">El empleado no se encuentra activo en el sistema.</string>
    <string name="ET006">El empleado no cuenta con una foto de perfil asignada, repórtelo con su supervisor.</string>
    <string name="ET007">No cuenta con una licencia para el uso de Human eTime.</string>
    <string name="ET025">La fecha y hora de checada es incorrecta.</string>
    <string name="ET026">El tipo de checada es incorrecto, los valores esperados son “E-Entrada” y “S-Salida”.</string>
</resources>