<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardViewEtime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialogTitle"
            style="@style/TextStyle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_licence_terms_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtTerms"
            style="@style/TextStyle8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/et_licence_terms_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkTerms"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPolicy"
            style="@style/TextStyle8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/et_licence_terms_text_link"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtTerms"
            app:layout_constraintTop_toBottomOf="@+id/txtTerms" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtTerms" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/checkTerms">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/ButtonEtime2"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccept"
                style="@style/ButtonEtime"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/et_text_confirm" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
