<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".main.ui.fragments.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLenguage"
            style="@style/InputLayoutEtimeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/login_title_language"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/acLenguage"
                style="@style/EditTextEtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiBssid"
            style="@style/InputLayoutEtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:endIconDrawable="@drawable/ic_wifi_bssid"
            app:endIconMode="custom"
            app:endIconTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/tiLenguage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/acBssid"
                style="@style/EditTextEtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:text="@string/wifi"
                android:textStyle="bold"
                android:foreground="?attr/selectableItemBackground"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_asistent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiBssid" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_5"
            style="@style/TextStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_voice_assistant"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/sw_asistent"
            app:layout_constraintStart_toEndOf="@+id/sw_asistent"
            app:layout_constraintTop_toTopOf="@+id/sw_asistent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiKeyWord"
            style="@style/InputLayoutEtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:expandedHintEnabled="false"
            app:prefixText="@string/key_word"
            app:prefixTextAppearance="@style/TextStyle3"
            app:prefixTextColor="@color/textColor1"
            app:suffixText="@string/change"
            app:suffixTextAppearance="@style/TextStyle3Bold"
            app:suffixTextColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/sw_asistent"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etKeyWord"
                style="@style/EditTextEtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:foreground="?attr/selectableItemBackground"
                android:inputType="none"
                android:textStyle="bold"
                tools:text="Blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_employees"
            style="@style/ButtonEtime2"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/employeesView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiKeyWord" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLocalPicture"
            style="@style/ButtonEtime2"
            android:layout_marginHorizontal="16dp"
            android:text="Actualizar fotografía"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_employees" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/ButtonEtime"
            android:layout_marginHorizontal="16dp"
            android:text="@string/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLocalPicture" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>